[@etecture/rex] Scrollbar: fixes styles overriding nested Scrollbars

--- a/core/src/components/Scrollbar/Scrollbar.module.css
+++ b/core/src/components/Scrollbar/Scrollbar.module.css
@@ -18,21 +18,21 @@
     }
 
     &.horizontalScrollDisabled {
-      & .viewport {
+      & > .viewport {
         overflow-x: hidden;
       }
 
-      & .horizontalTrack {
+      & > .horizontalTrack {
         display: none;
       }
     }
 
     &.verticalScrollDisabled {
-      & .viewport {
+      & > .viewport {
         overflow-y: hidden;
       }
 
-      & .verticalTrack {
+      & > .verticalTrack {
         display: none;
       }
     }
